--- a/stack.yml
+++ b/stack.yml
@@ -3,7 +3,7 @@ provider:
   gateway: http://127.0.0.1:8080
 
 functions:
-  kubernetesgo:
+  kuberneteswat:
     lang: go
     handler: ./kubernetesgo
     image: martindekov/kubernetesgo:latest
